<resources>
    <string name="app_name">TrackerApp</string>
    <string name="button">Button</string>
    <string name="login_page">LOGIN PAGE</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="register">Register</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="timestamp">Timestamp:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_list">User List</string>
</resources>