<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="visible"
    android:gravity="center_horizontal"
    tools:context=".view.LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_page"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="#4CAF50"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"/>





    <EditText
        android:id="@+id/etUsernameLogin"
        android:layout_width="350dp"
        android:drawableLeft="@drawable/ic_perm"
        android:gravity="center"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:hint="@string/username"
        android:textColor="#009688"
        android:textStyle="bold"
        />

    <EditText
        android:drawableLeft="@drawable/ic_lock"
        android:gravity="center"
        android:id="@+id/etPasswordLogin"
        android:layout_width="350dp"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"
        android:layout_height="60dp"
        android:hint="@string/password"
        android:textColor="#009688"
        android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/loginButton"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:text="@string/login"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="#000000"/>

            <Button
                android:id="@+id/userSignupButton"
                android:layout_marginTop="20dp"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:text="@string/register"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="#000000"/>


            <Button
                android:id="@+id/switchUserButton"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:background="@drawable/user_img"
                android:layout_marginTop="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView"
                app:layout_constraintTop_toTopOf="parent" />
            <FrameLayout
                android:id="@+id/fragmentContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                />

        </LinearLayout>



    </LinearLayout>


</ScrollView>