<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".view.SignupActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="SIGNUP PAGE"
        android:textColor="#F44336"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etEmailSignup"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:drawableLeft="@drawable/ic_perm"
        android:gravity="center"
        android:hint="@string/username"
        android:textColor="#009688"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etPasswordSignup"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:drawableLeft="@drawable/ic_lock"
        android:gravity="center"
        android:hint="@string/password"
        android:textColor="#009688"
        android:textStyle="bold" />


    <Button
        android:id="@+id/signupSaveButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/register"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/resultText"
        android:layout_marginTop="30dp"/>

</LinearLayout>